Added EDA and Statistical Analysis

--- a/notebooks/eda_analysis.ipynb
+++ b/notebooks/eda_analysis.ipynb
@@ -166,13 +166,122 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(\"Checking for outliers...\")\n",
     "numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
     "if not numeric_cols.empty:\n",
-    "        z_scores = np.abs(zscore(df[numeric_cols].dropna()))\n",
-    "        outliers = (z_scores > 3).sum(axis=0)\n",
-    "        print(outliers)"
+    "    z_scores = np.abs(zscore(df[numeric_cols].dropna()))\n",
+    "    outliers = (z_scores > 3).sum(axis=0)\n",
+    "    print(outliers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Time Series Analysis\n",
+    "time_cols = [\"GHI\", \"DNI\", \"DHI\", \"Tamb\"]\n",
+    "time_cols = [col for col in time_cols if col in df.columns]\n",
+    "if \"Date\" in df.columns:\n",
+    "    df[\"Date\"] = pd.to_datetime(df[\"Date\"])\n",
+    "    df.set_index(\"Date\", inplace=True)\n",
+    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "    df[time_cols].plot(ax=ax, title=f\"Time Series Analysis: {name}\")\n",
+    "    save_plot(fig, f\"time_series_{name}.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correlation Analysis\n",
+    "if not df[numeric_cols].empty:\n",
+    "    corr = df[numeric_cols].corr()\n",
+    "    fig, ax = plt.subplots(figsize=(10, 8))\n",
+    "    sns.heatmap(corr, annot=True, cmap=\"coolwarm\", ax=ax)\n",
+    "    ax.set_title(f\"Correlation Matrix: {name}\")\n",
+    "    save_plot(fig, f\"correlation_matrix_{name}.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wind Analysis\n",
+    "if \"WS\" in df.columns and \"WD\" in df.columns:\n",
+    "    fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "    sns.histplot(df[\"WS\"], kde=True, ax=ax)\n",
+    "    ax.set_title(f\"Wind Speed Distribution: {name}\")\n",
+    "    save_plot(fig, f\"wind_speed_distribution_{name}.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histograms\n",
+    "fig, axes = plt.subplots(len(numeric_cols) // 3 + 1, 3, figsize=(15, 10))\n",
+    "axes = axes.flatten()\n",
+    "for i, col in enumerate(numeric_cols):\n",
+    "    sns.histplot(df[col], kde=True, ax=axes[i])\n",
+    "    axes[i].set_title(f\"Histogram: {col}\")\n",
+    "save_plot(fig, f\"histograms_{name}.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bubble Chart\n",
+    "bubble_vars = [\"GHI\", \"Tamb\", \"WS\", \"RH\"]\n",
+    "bubble_vars = [col for col in bubble_vars if col in df.columns]\n",
+    "if len(bubble_vars) >= 3:\n",
+    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "    sns.scatterplot(\n",
+    "        x=bubble_vars[0],\n",
+    "        y=bubble_vars[1],\n",
+    "        size=bubble_vars[2],\n",
+    "        hue=bubble_vars[2],\n",
+    "        sizes=(40, 400),\n",
+    "        data=df,\n",
+    "        ax=ax,\n",
+    "    )\n",
+    "    ax.set_title(f\"Bubble Chart: {name}\")\n",
+    "    save_plot(fig, f\"bubble_chart_{name}.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Cleaning\n",
+    "if \"Comments\" in df.columns:\n",
+    "    df.drop(columns=[\"Comments\"], inplace=True)\n",
+    "df.fillna(method=\"ffill\", inplace=True)\n",
+    "df.fillna(method=\"bfill\", inplace=True)\n",
+    "processed_file_path = os.path.join(processed_data_dir, f\"cleaned_{name}.csv\")\n",
+    "df.to_csv(processed_file_path, index=False)\n",
+    "\n",
+    "print(f\"Finished processing dataset: {name}\\n\")"
    ]
   }
  ],
