Testing the notebooks

--- a/notebooks/eda_analysis.ipynb
+++ b/notebooks/eda_analysis.ipynb
@@ -27,7 +27,8 @@
     "# Set folder paths\n",
     "# data_dir = os.path.join(script_dir, \"data\")\n",
     "data_dir = os.path.abspath(os.path.join(script_dir, \"..\", \"data\"))\n",
-    "output_dir = os.path.join(script_dir, \"Output\")\n",
+    "\n",
+    "output_dir = os.path.abspath(os.path.join(script_dir,\"..\", \"Output\"))\n",
     "plots_dir = os.path.join(output_dir, \"plots\")\n",
     "summary_dir = os.path.join(output_dir, \"summary\")\n",
     "processed_data_dir = os.path.join(output_dir, \"processed\")"
