--- a/notebooks/eda_analysis.ipynb
+++ b/notebooks/eda_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking for file: d:\\KAIM\\Moonlight-EDA-Dashboard\\data\\benin-malanville.csv\n",
+      "Looking for file: d:\\KAIM\\Moonlight-EDA-Dashboard\\data\\sierraleone-bumbuna.csv\n",
+      "Looking for file: d:\\KAIM\\Moonlight-EDA-Dashboard\\data\\togo-dapaong_qc.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Load datasets\n",
     "files = [\"benin-malanville.csv\", \"sierraleone-bumbuna.csv\", \"togo-dapaong_qc.csv\"]\n",
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset: benin-malanville\n",
+      "Processing dataset: sierraleone-bumbuna\n",
+      "Processing dataset: togo-dapaong_qc\n"
+     ]
+    }
+   ],
    "source": [
     "# Perform EDA on each dataset\n",
     "for name, df in datasets.items():\n",
@@ -102,9 +122,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  count        mean         std    min    25%    50%      75%  \\\n",
+      "GHI            525600.0  230.555040  322.532347  -12.7   -2.2    2.1  442.400   \n",
+      "DNI            525600.0  151.258469  250.956962    0.0    0.0    0.0  246.400   \n",
+      "DHI            525600.0  116.444352  156.520714    0.0    0.0    2.5  215.700   \n",
+      "ModA           525600.0  226.144375  317.346938    0.0    0.0    4.4  422.525   \n",
+      "ModB           525600.0  219.568588  307.932510    0.0    0.0    4.3  411.000   \n",
+      "Tamb           525600.0   27.751788    4.758023   14.9   24.2   27.2   31.100   \n",
+      "RH             525600.0   55.013160   28.778732    3.3   26.5   59.3   80.800   \n",
+      "WS             525600.0    2.368093    1.462668    0.0    1.4    2.2    3.200   \n",
+      "WSgust         525600.0    3.229490    1.882565    0.0    1.9    2.9    4.400   \n",
+      "WSstdev        525600.0    0.557740    0.268923    0.0    0.4    0.5    0.700   \n",
+      "WD             525600.0  161.741845   91.877217    0.0   74.8  199.1  233.500   \n",
+      "WDstdev        525600.0   10.559568    5.915490    0.0    6.9   10.8   14.100   \n",
+      "BP             525600.0  975.915242    2.153977  968.0  975.0  976.0  977.000   \n",
+      "Cleaning       525600.0    0.000535    0.023116    0.0    0.0    0.0    0.000   \n",
+      "Precipitation  525600.0    0.001382    0.026350    0.0    0.0    0.0    0.000   \n",
+      "TModA          525600.0   32.444403   10.998334   13.1   23.9   28.4   40.600   \n",
+      "TModB          525600.0   33.543330   12.769277   13.1   23.6   28.4   43.000   \n",
+      "Comments            0.0         NaN         NaN    NaN    NaN    NaN      NaN   \n",
+      "\n",
+      "                  max  missing  \n",
+      "GHI            1424.0        0  \n",
+      "DNI            1004.5        0  \n",
+      "DHI             805.7        0  \n",
+      "ModA           1380.0        0  \n",
+      "ModB           1367.0        0  \n",
+      "Tamb             41.4        0  \n",
+      "RH               99.8        0  \n",
+      "WS               16.1        0  \n",
+      "WSgust           23.1        0  \n",
+      "WSstdev           4.7        0  \n",
+      "WD              360.0        0  \n",
+      "WDstdev          86.9        0  \n",
+      "BP              983.0        0  \n",
+      "Cleaning          1.0        0  \n",
+      "Precipitation     2.3        0  \n",
+      "TModA            70.4        0  \n",
+      "TModB            94.6        0  \n",
+      "Comments          NaN   525600  \n"
+     ]
+    }
+   ],
    "source": [
     " # Summary statistics\n",
     "summary = generate_summary_statistics(df, f\"summary_{name}.csv\")\n",
@@ -113,9 +179,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking for missing values...\n",
+      "Timestamp             0\n",
+      "GHI                   0\n",
+      "DNI                   0\n",
+      "DHI                   0\n",
+      "ModA                  0\n",
+      "ModB                  0\n",
+      "Tamb                  0\n",
+      "RH                    0\n",
+      "WS                    0\n",
+      "WSgust                0\n",
+      "WSstdev               0\n",
+      "WD                    0\n",
+      "WDstdev               0\n",
+      "BP                    0\n",
+      "Cleaning              0\n",
+      "Precipitation         0\n",
+      "TModA                 0\n",
+      "TModB                 0\n",
+      "Comments         525600\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Data quality check\n",
     "print(\"Checking for missing values...\")\n",
@@ -125,9 +219,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking for outliers...\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Checking for outliers...\")\n",
     "numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
@@ -139,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,9 +327,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\amenz\\AppData\\Local\\Temp\\ipykernel_9696\\2832412495.py:4: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df.fillna(method=\"ffill\", inplace=True)\n",
+      "C:\\Users\\amenz\\AppData\\Local\\Temp\\ipykernel_9696\\2832412495.py:5: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df.fillna(method=\"bfill\", inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished processing dataset: togo-dapaong_qc\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Data Cleaning\n",
     "if \"Comments\" in df.columns:\n",
